<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sushil.ubs;">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wc"
        android:textSize="18sp" />

    <Button
        android:text="@string/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        tools:ignore="UnknownId"
        android:layout_marginBottom="74dp"
        android:layout_alignBottom="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/button3"
        android:layout_alignStart="@+id/button" />

    <Button
        android:text="@string/manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_marginBottom="96dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button2" />

    <TextView
        android:layout_width="1250sp"
        android:layout_height="35sp"
        android:text="@string/club"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true" />

</RelativeLayout>
